# currybo

./: .gitignore  README.md  applications.md  pyproject.toml
.github/workflows/: ci.yaml
benchmarks/: figure_chemistry_methods.py  figure_complete.py  figure_joint.py  figure_sequential.py  figure_single.py
benchmarks/benchmark_frac/: benchmark_frac_complete_monitoring.py  benchmark_frac_oneLA.py  benchmark_frac_single_substrate.py  benchmark_frac_twoLAjoint.py  benchmark_frac_twoLAjoint_EI.py  benchmark_frac_twoLArand.py  benchmark_frac_twoLArand_EI.py  benchmark_frac_twoLAvar.py  benchmark_frac_twoLAvar_EI.py  benchmark_frac_twoLAvar_explore.py
benchmarks/benchmark_mean/: benchmark_mean_complete_monitoring.py  benchmark_mean_oneLA.py  benchmark_mean_single_substrate.py  benchmark_mean_twoLAjoint.py  benchmark_mean_twoLAjoint_EI.py  benchmark_mean_twoLArand.py  benchmark_mean_twoLArand_EI.py  benchmark_mean_twoLAvar.py  benchmark_mean_twoLAvar_EI.py  benchmark_mean_twoLAvar_explore.py
benchmarks/data-analysis/: analysis_utils.py  data_analysis_frac.py  data_analysis_frac_fps.py  data_analysis_frac_smart.py  data_analysis_mean.py  data_analysis_mean_fps.py  data_analysis_mean_smart.py  figure_data_analysis.py
data-analysis/Cernak/: Cernak_cleaned.csv  Cernak_emulator.ipynb  Cernak_enhanced.csv  Cernak_enhancement.ipynb  Cernak_original.csv  eda.ipynb  enhancement_utility.py
data-analysis/Denmark/: Denmark_emulator.ipynb  Denmark_enhanced.csv  Denmark_enhancement.ipynb  Denmark_original.csv  eda.ipynb  enhancement_utility.py
tests/: test_campaign.py
(+88 files in other folders)
